--- a/data-guru.html
+++ b/data-guru.html
@@ -176,8 +176,8 @@
     </div>
 
     <div>
-      <table class="table text-center my-10 mx-auto">
-        <thead>
+      <table class="table text-center my-10 mx-auto text-white font-semibold">
+        <thead class="font-bold">
           <tr class="bg-[#1973A5]">
             <td>NAMA</td>
             <td class="px-10">JENIS KELAMIN</td>
