--- a/data-guru.html
+++ b/data-guru.html
@@ -103,16 +103,23 @@
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="sejarah.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
                       >Sejarah</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="profile-sekolah.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
                       >Profile Sekolah</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="jurusan.html"
+                      class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
+                      >Jurusan</a
                     >
                   </li>
                 </ul>
@@ -154,7 +161,7 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="visi-misi.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] text-black"
                       >Visi & Misi</a
                     >
