--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
   </head>
   <body class="bg-[#C5C5C5]">
+    <!-- navbar -->
     <nav class="bg-[#1973A5] py-3">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-2 md:px-4 bg-[#1973A5]"
@@ -119,16 +120,23 @@
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="sejarah.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
                       >Sejarah</a
                     >
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="profile-sekolah.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
                       >Profile Sekolah</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="jurusan.html"
+                      class="block px-4 py-2 hover:bg-[#398FBF] hover:text-white"
+                      >Jurusan</a
                     >
                   </li>
                 </ul>
@@ -170,7 +178,7 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="visi-misi.html"
                       class="block px-4 py-2 hover:bg-[#398FBF] text-black"
                       >Visi & Misi</a
                     >
