--- a/profile-sekolah.html
+++ b/profile-sekolah.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Guru</title>
+    <title>Profile Sekolah</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </head>
@@ -183,195 +183,113 @@
     </div>
 
     <div>
-      <table class="table text-center my-10 mx-auto text-white font-semibold">
-        <thead class="font-bold">
-          <tr class="bg-[#1973A5]">
-            <td>NAMA</td>
-            <td class="px-10">JENIS KELAMIN</td>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- 1 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">H. Sutoyo, S.Pd.I, M.M, M.Pd.I</td>
-            <td>Laki - Laki</td>
-          </tr>
+      <table class="table my-10 mx-auto text-white font-bold">
+        <!-- 1 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">NPSN</td>
+          <td class="w-96 pl-20 pr-5">10648295</td>
+        </tr>
 
-          <!-- 2 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Esy Lidia Susanti, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 2 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Tingkatan Sekolah</td>
+          <td class="w-96 pl-20 pr-5">SMK</td>
+        </tr>
 
-          <!-- 3 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Rasyid Rido, S.Pd.M.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
+        <!-- 3 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Kepala Sekolah</td>
+          <td class="w-96 pl-20 pr-5">H. Sutoyo, S.Pd.I., M.M., M.Pd.I</td>
+        </tr>
 
-          <!-- 4 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Siti Mahfudhah, SE</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 4 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Operator</td>
+          <td class="w-96 pl-20 pr-5">Estalia S.Pd</td>
+        </tr>
 
-          <!-- 5 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Dedi Sugiyanto, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
+        <!-- 5 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Akreditasi</td>
+          <td class="w-96 pl-20 pr-5">Baik (B)</td>
+        </tr>
 
-          <!-- 6 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Haslindawati, S.Pd.Gr</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 6 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Kurikulum</td>
+          <td class="w-96 pl-20 pr-5">
+            SMK 2013 REV.  Otomatisasi dan Tata Kelola Perkantoran
+          </td>
+        </tr>
 
-          <!-- 7 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Edison, S.Si</td>
-            <td>Laki - Laki</td>
-          </tr>
+        <!-- 7 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Jam Belajar</td>
+          <td class="w-96 pl-20 pr-5">Pagi/6 hari</td>
+        </tr>
 
-          <!-- 8 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Lili Suharningsih, ST</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 8 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Luas Tanah</td>
+          <td class="w-96 pl-20 pr-5">15,000 m2</td>
+        </tr>
 
-          <!-- 9 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Eryani, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 9 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Telepon</td>
+          <td class="w-96 pl-20 pr-5"></td>
+        </tr>
 
-          <!-- 10 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Iskandar S.Kom</td>
-            <td>Laki - Laki</td>
-          </tr>
+        <!-- 10 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Fax</td>
+          <td class="w-96 pl-20 pr-5"></td>
+        </tr>
 
-          <!-- 11 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Ati Warisa, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 11 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Provinsi</td>
+          <td class="w-96 pl-20 pr-5">Prov. Sumatera Selatan</td>
+        </tr>
 
-          <!-- 12 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Endang Hastuti, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 12 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Kota/Kabupaten</td>
+          <td class="w-96 pl-20 pr-5">Kab. Ogan Komering Ulu Timur</td>
+        </tr>
 
-          <!-- 13 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Marjani, M.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
+        <!-- 13 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Kecamatan</td>
+          <td class="w-96 pl-20 pr-5">Kec. Buay Pemuka Bangsa Raja</td>
+        </tr>
 
-          <!-- 14 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Heraliana, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+        <!-- 14 -->
+        <tr class="bg-[#FA55A5]">
+          <td class="w-60 pl-10">Kelurahan</td>
+          <td class="w-96 pl-20 pr-5">Anyar</td>
+        </tr>
 
-          <!-- 15 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Suhaili, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 16 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nur Nahariyanti, S.Pd.I</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 17 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nurmawati, S.Pd.I</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 18 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Susilawati, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 19 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nurhayati N, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 20 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Yeni Muslia, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 21 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Lia Amelia Ayatillah, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 22 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Edo Darmawan, S.Sos</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 23 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Diana Novitasari, S.Pd. MSc</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 24 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Dewi Merisa, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 25 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Alfiyatur Rosyida, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 26 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Pujiyono, Amd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 27 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Kholik Mawardi</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 28 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Angga Yudi Rahman</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 29 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Estalia, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 30 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Angga Setiawan, Amd.Kom</td>
-            <td>Laki - Laki</td>
-          </tr>
-        </tbody>
+        <!-- 15 -->
+        <tr class="bg-[#939393]/80">
+          <td class="w-60 pl-10">Email</td>
+          <td class="w-96 pl-20 pr-5">smkn1bpbangsaraja2012@gmail.com</td>
+        </tr>
       </table>
+    </div>
+
+    <div class="md:px-10 px-4 mx-auto bg-[#9D9D9D]/80 w-full md:w-[50%] mb-5">
+      <p class="font-bold text-base md:text-xl mb-3">
+        Legalitas SMK Negeri 1 Bp Bangsa Raja
+      </p>
+
+      <p>📕 SK Pendirian: 221 tahun 2012</p>
+
+      <p>🗓️ Tanggal SK Pendirian: 30 June 2012</p>
+
+      <p>📕 SK Operasional: 221 Tahun 2012</p>
+
+      <p>🗓️ Tanggal SK Operasional: 30 June 2012</p>
     </div>
 
     <!-- footer -->
