--- a/sejarah.html
+++ b/sejarah.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Guru</title>
+    <title>Sejarah</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </head>
@@ -182,196 +182,24 @@
       />
     </div>
 
-    <div>
-      <table class="table text-center my-10 mx-auto text-white font-semibold">
-        <thead class="font-bold">
-          <tr class="bg-[#1973A5]">
-            <td>NAMA</td>
-            <td class="px-10">JENIS KELAMIN</td>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- 1 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">H. Sutoyo, S.Pd.I, M.M, M.Pd.I</td>
-            <td>Laki - Laki</td>
-          </tr>
+    <div class="bg-[#11324F] px-20 py-10 text-white">
+      <p class="md:text-3xl pt-10 pb-4">
+        SMKN 1 Bp Bangsa Raja, <br />
+        Kabupaten Ogan Komering Ulu Timur
+      </p>
 
-          <!-- 2 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Esy Lidia Susanti, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
+      <p class="md:text-xl py-4">
+        SMKN 1 Bp Bangsa Raja adalah sebuah sekolah SMK negeri yang alamatnya di
+        Jlan Lintas Komering Desa Anyar, Kab. Ogan Komering Ulu Timur.
+      </p>
 
-          <!-- 3 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Rasyid Rido, S.Pd.M.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 4 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Siti Mahfudhah, SE</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 5 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Dedi Sugiyanto, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 6 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Haslindawati, S.Pd.Gr</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 7 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Edison, S.Si</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 8 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Lili Suharningsih, ST</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 9 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Eryani, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 10 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Iskandar S.Kom</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 11 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Ati Warisa, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 12 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Endang Hastuti, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 13 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Marjani, M.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 14 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Heraliana, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 15 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Suhaili, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 16 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nur Nahariyanti, S.Pd.I</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 17 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nurmawati, S.Pd.I</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 18 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Susilawati, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 19 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nurhayati N, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 20 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Yeni Muslia, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 21 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Lia Amelia Ayatillah, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 22 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Edo Darmawan, S.Sos</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 23 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Diana Novitasari, S.Pd. MSc</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 24 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Dewi Merisa, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 25 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Alfiyatur Rosyida, S.Pd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 26 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Pujiyono, Amd</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 27 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Kholik Mawardi</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 28 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Angga Yudi Rahman</td>
-            <td>Laki - Laki</td>
-          </tr>
-
-          <!-- 29 -->
-          <tr class="bg-[#939393]/80">
-            <td class="px-10">Estalia, S.Pd</td>
-            <td>Perempuan</td>
-          </tr>
-
-          <!-- 30 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Angga Setiawan, Amd.Kom</td>
-            <td>Laki - Laki</td>
-          </tr>
-        </tbody>
-      </table>
+      <p class="md:text-lg pt-4 pb-10">
+        SMK negeri ini berdiri sejak 2012. Saat ini SMK Negeri 1 Bp Bangsa Raja
+        memakai panduan kurikulum belajar SMK 2013 REV. Otomatisasi dan Tata
+        Kelola Perkantoran. SMKN 1 Bp Bangsa Raja dibawah komando seorang kepala
+        sekolah dengan nama Sutoyo ditangani oleh seorang operator yang bernama
+        Dedi Sugiyanto.
+      </p>
     </div>
 
     <!-- footer -->
