--- a/data-guru.html
+++ b/data-guru.html
@@ -287,12 +287,6 @@
             <td>Perempuan</td>
           </tr>
 
-          <!-- 17 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Nurmawati, S.Pd.I</td>
-            <td>Perempuan</td>
-          </tr>
-
           <!-- 18 -->
           <tr class="bg-[#939393]/80">
             <td class="px-10">Susilawati, S.Pd</td>
@@ -315,12 +309,6 @@
           <tr class="bg-[#FA55A5]">
             <td class="px-10">Lia Amelia Ayatillah, S.Pd</td>
             <td>Perempuan</td>
-          </tr>
-
-          <!-- 22 -->
-          <tr class="bg-[#FA55A5]">
-            <td class="px-10">Edo Darmawan, S.Sos</td>
-            <td>Laki - Laki</td>
           </tr>
 
           <!-- 23 -->
@@ -368,6 +356,18 @@
           <!-- 30 -->
           <tr class="bg-[#FA55A5]">
             <td class="px-10">Angga Setiawan, Amd.Kom</td>
+            <td>Laki - Laki</td>
+          </tr>
+
+          <!-- 17 -->
+          <tr class="bg-[#939393]">
+            <td class="px-10">Nurmawati, S.Pd.I</td>
+            <td>Perempuan</td>
+          </tr>
+
+          <!-- 22 -->
+          <tr class="bg-[#FA55A5]">
+            <td class="px-10">Edo Darmawan, S.Sos</td>
             <td>Laki - Laki</td>
           </tr>
         </tbody>
