--- a/profile-sekolah.html
+++ b/profile-sekolah.html
@@ -183,7 +183,7 @@
     </div>
 
     <div>
-      <table class="table my-10 mx-auto text-white font-bold">
+      <table class="table my-10 w-full md:w-auto mx-auto text-white font-bold">
         <!-- 1 -->
         <tr class="bg-[#FA55A5]">
           <td class="w-60 pl-10">NPSN</td>
