--- a/profile-sekolah.html
+++ b/profile-sekolah.html
@@ -188,37 +188,37 @@
       >
         <!-- 1 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">NPSN</td>
+          <td class="w-60 pl-2 md:pl-10">NPSN</td>
           <td class="w-96 pl-20 md:pr-5">10648295</td>
         </tr>
 
         <!-- 2 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Tingkatan Sekolah</td>
+          <td class="w-60 pl-2 md:pl-10">Tingkatan Sekolah</td>
           <td class="w-96 pl-20 md:pr-5">SMK</td>
         </tr>
 
         <!-- 3 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Kepala Sekolah</td>
+          <td class="w-60 pl-2 md:pl-10">Kepala Sekolah</td>
           <td class="w-96 pl-20 md:pr-5">H. Sutoyo, S.Pd.I., M.M., M.Pd.I</td>
         </tr>
 
         <!-- 4 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Operator</td>
+          <td class="w-60 pl-2 md:pl-10">Operator</td>
           <td class="w-96 pl-20 md:pr-5">Estalia S.Pd</td>
         </tr>
 
         <!-- 5 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Akreditasi</td>
+          <td class="w-60 pl-2 md:pl-10">Akreditasi</td>
           <td class="w-96 pl-20 md:pr-5">Baik (B)</td>
         </tr>
 
         <!-- 6 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Kurikulum</td>
+          <td class="w-60 pl-2 md:pl-10">Kurikulum</td>
           <td class="w-96 pl-20 md:pr-5">
             SMK 2013 REV.  Otomatisasi dan Tata Kelola Perkantoran
           </td>
@@ -226,62 +226,62 @@
 
         <!-- 7 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Jam Belajar</td>
+          <td class="w-60 pl-2 md:pl-10">Jam Belajar</td>
           <td class="w-96 pl-20 md:pr-5">Pagi/6 hari</td>
         </tr>
 
         <!-- 8 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Luas Tanah</td>
+          <td class="w-60 pl-2 md:pl-10">Luas Tanah</td>
           <td class="w-96 pl-20 md:pr-5">15,000 m2</td>
         </tr>
 
         <!-- 9 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Telepon</td>
+          <td class="w-60 pl-2 md:pl-10">Telepon</td>
           <td class="w-96 pl-20 md:pr-5"></td>
         </tr>
 
         <!-- 10 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Fax</td>
+          <td class="w-60 pl-2 md:pl-10">Fax</td>
           <td class="w-96 pl-20 md:pr-5"></td>
         </tr>
 
         <!-- 11 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Provinsi</td>
+          <td class="w-60 pl-2 md:pl-10">Provinsi</td>
           <td class="w-96 pl-20 md:pr-5">Prov. Sumatera Selatan</td>
         </tr>
 
         <!-- 12 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Kota/Kabupaten</td>
+          <td class="w-60 pl-2 md:pl-10">Kota/Kabupaten</td>
           <td class="w-96 pl-20 md:pr-5">Kab. Ogan Komering Ulu Timur</td>
         </tr>
 
         <!-- 13 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Kecamatan</td>
+          <td class="w-60 pl-2 md:pl-10">Kecamatan</td>
           <td class="w-96 pl-20 md:pr-5">Kec. Buay Pemuka Bangsa Raja</td>
         </tr>
 
         <!-- 14 -->
         <tr class="bg-[#FA55A5]">
-          <td class="w-60 pl-10">Kelurahan</td>
+          <td class="w-60 pl-2 md:pl-10">Kelurahan</td>
           <td class="w-96 pl-20 md:pr-5">Anyar</td>
         </tr>
 
         <!-- 15 -->
         <tr class="bg-[#939393]/80">
-          <td class="w-60 pl-10">Email</td>
+          <td class="w-60 pl-2 md:pl-10">Email</td>
           <td class="w-96 pl-20 md:pr-5">smkn1bpbangsaraja2012@gmail.com</td>
         </tr>
       </table>
     </div>
 
     <div
-      class="md:px-10 px-2 md:py-4 py-2 mx-auto bg-[#9D9D9D]/80 w-full md:w-[50%] mb-5"
+      class="md:px-10 px-4 md:py-4 py-2 mx-auto bg-[#9D9D9D]/80 w-full md:w-[50%] mb-5"
     >
       <p class="font-bold text-base md:text-xl mb-3">
         Legalitas SMK Negeri 1 Bp Bangsa Raja
