--- a/sejarah.html
+++ b/sejarah.html
@@ -182,7 +182,7 @@
       />
     </div>
 
-    <div class="bg-[#11324F] px-20 py-10 text-white">
+    <div class="bg-[#11324F] px-20 py-10 text-white h-full">
       <p class="md:text-3xl pt-10 pb-4">
         SMKN 1 Bp Bangsa Raja, <br />
         Kabupaten Ogan Komering Ulu Timur
@@ -203,7 +203,7 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#1973A5]">
+    <div class="bg-[#1973A5] h-full">
       <p class="text-center font-bold text-xl text-white py-5">
         SMK NEGERI 1 BP BANGSA RAJA
       </p>
