--- a/profile-sekolah.html
+++ b/profile-sekolah.html
@@ -281,7 +281,7 @@
     </div>
 
     <div
-      class="md:px-10 px-4 md:py-4 py-2 mx-auto bg-[#9D9D9D]/80 w-full md:w-[50%] mb-5"
+      class="md:px-10 px-4 md:py-4 py-3 mx-auto bg-[#9D9D9D]/80 w-full md:w-[50%] mb-5"
     >
       <p class="font-bold text-base md:text-xl mb-3">
         Legalitas SMK Negeri 1 Bp Bangsa Raja
@@ -297,7 +297,7 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#1973A5]">
+    <div class="bg-[#1973A5] h-full">
       <p class="text-center font-bold text-xl text-white py-5">
         SMK NEGERI 1 BP BANGSA RAJA
       </p>
