--- a/visi-misi.html
+++ b/visi-misi.html
@@ -174,7 +174,7 @@
       </div>
     </nav>
 
-    <div class="mb-10">
+    <div class="mb-10  h-full">
       <div>
         <img src="image/img/logo-smk.png" class="mx-auto" alt="" />
       </div>
@@ -276,7 +276,7 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#1973A5]">
+    <div class="bg-[#1973A5]  absolute w-full mt-[20%] md:mt-[100px]">
       <p class="text-center font-bold text-xl text-white py-5">
         SMK NEGERI 1 BP BANGSA RAJA
       </p>
