--- a/visi-misi.html
+++ b/visi-misi.html
@@ -174,7 +174,7 @@
       </div>
     </nav>
 
-    <div class="mb-10  h-full">
+    <div class="my-10  h-full">
       <div>
         <img src="image/img/logo-smk.png" class="mx-auto" alt="" />
       </div>
