--- a/visi-misi.html
+++ b/visi-misi.html
@@ -176,7 +176,7 @@
 
     <div class="my-10  h-full">
       <div>
-        <img src="image/img/logo-smk.png" class="mx-auto" alt="" />
+        <img src="image/img/logo-smk.png" class="mx-auto  size-60 w-[22rem]" alt="" />
       </div>
       <div class="text-center">
         <p class="md:text-2xl text-[#1973A5] font-bold text-xl">VISI & MISI</p>
