--- a/visi-misi.html
+++ b/visi-misi.html
@@ -276,7 +276,7 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#1973A5]  absolute w-full mt-[30%] md:mt-[100px]">
+    <div class="bg-[#1973A5]  absolute w-full mt-[100px]">
       <p class="text-center font-bold text-xl text-white py-5">
         SMK NEGERI 1 BP BANGSA RAJA
       </p>
