--- a/sejarah.html
+++ b/sejarah.html
@@ -182,7 +182,7 @@
       />
     </div>
 
-    <div class="bg-[#11324F] px-20 py-10 text-white h-full">
+    <div class="bg-[#11324F] px-20 pt-10 pb-15 text-white h-full">
       <p class="md:text-3xl pt-10 pb-4">
         SMKN 1 Bp Bangsa Raja, <br />
         Kabupaten Ogan Komering Ulu Timur
