--- a/data-guru.html
+++ b/data-guru.html
@@ -370,6 +370,12 @@
             <td class="px-10">Edo Darmawan, S.Sos</td>
             <td>Laki - Laki</td>
           </tr>
+
+          <!-- 31 -->
+          <tr class="bg-[#939393]">
+            <td class="px-10">Pujiono, A.Md</td>
+            <td>P Kelistrikan SPM</td>
+          </tr>
         </tbody>
       </table>
     </div>
