--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,23 @@
             </p>
           </div>
         </div>
+
+        <!-- 28 -->
+        <div class="card w-52 bg-white rounded-lg drop-shadow text-center">
+          <img
+            src="image/guru/Pujiono, A.md.jpeg"
+            class="rounded-t-lg max-h-60 w-full h-full"
+            alt=""
+          />
+          <div class="py-2">
+            <p class="px-2 text-[8.5px] md:text-[11px] font-bold">
+              Pujiono, A.Md.
+            </p>
+            <p class="px-2 text-[12px] rounded-lg drop-shadow-lg md:text-sm">
+              Guru P Kelistrikan SPM
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
