--- a/index.html
+++ b/index.html
@@ -1162,6 +1162,40 @@
             </p>
           </div>
         </div>
+
+        <!-- 29 -->
+        <div class="card w-52 bg-white rounded-lg drop-shadow text-center">
+          <img
+            src="image/guru/Herlina Wati S.E, Pegawai TU .jpeg"
+            class="rounded-t-lg max-h-60 w-full h-full"
+            alt=""
+          />
+          <div class="py-2">
+            <p class="px-2 text-[8.5px] md:text-[11px] font-bold">
+              Herlina Wati S.E
+            </p>
+            <p class="px-2 text-[12px] rounded-lg drop-shadow-lg md:text-sm">
+              Pegawai TU
+            </p>
+          </div>
+        </div>
+
+        <!-- 30 -->
+        <div class="card w-52 bg-white rounded-lg drop-shadow text-center">
+          <img
+            src="image/guru/Kholik Mawardi Guru P Sasis SPM .jpeg"
+            class="rounded-t-lg max-h-60 w-full h-full"
+            alt=""
+          />
+          <div class="py-2">
+            <p class="px-2 text-[8.5px] md:text-[11px] font-bold">
+              Kholik Mawardi
+            </p>
+            <p class="px-2 text-[12px] rounded-lg drop-shadow-lg md:text-sm">
+              Guru P Sasis SPM
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
