--- a/index.html
+++ b/index.html
@@ -832,10 +832,10 @@
           />
           <div class="py-2">
             <p class="px-2 text-[8.5px] md:text-[11px] font-bold">
-              Haslindawati, S.Pd.Gr
+              Lili Suharningsih, S.T
             </p>
             <p class="px-2 text-[12px] rounded-lg drop-shadow-lg md:text-sm">
-              Guru Bahasa Inggris
+              Guru PIPAS
             </p>
           </div>
         </div>
