--- a/jurusan.html
+++ b/jurusan.html
@@ -185,7 +185,7 @@
           <div class="lg:w-1/2">
             <div
               class="h-64 bg-cover lg:rounded-lg lg:h-full"
-              style="background-image: url('image/activity/0.jpg')"
+              style="background-image: url('image/activity/01.jpeg')"
             ></div>
           </div>
           <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
@@ -256,7 +256,7 @@
             <div
               class="h-64 bg-cover lg:rounded-lg lg:h-full"
               style="
-                background-image: url('image/activity/WhatsApp\ Image\ 2024-10-27\ at\ 21.13.23\(1\).jpeg');
+                background-image: url('image/activity/4.jpeg');
               "
             ></div>
           </div>
@@ -264,7 +264,7 @@
             <h2 class="text-3xl font-bold">
               # TBSM <br />
               <span class="text-xl"
-                >Otomatisasi dan Tata Kelola Perkantoran</span
+                >Teknik dan Bisnis Sepeda Motor</span
               >
             </h2>
             <p class="mt-4 text-gray-600">
@@ -289,13 +289,13 @@
           <div class="lg:w-1/2">
             <div
               class="h-64 bg-cover lg:rounded-lg lg:h-full"
-              style="background-image: url('image/activity/01.jpeg')"
+              style="background-image: url('image/activity/2.jpeg')"
             ></div>
           </div>
           <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
             <h2 class="text-3xl font-bold">
               # OTKP <br />
-              <span class="text-xl">Teknik Komputer dan Jaringan</span>
+              <span class="text-xl">Otomatisasi dan Tata Kelola Perkantoran</span>
             </h2>
             <p class="mt-4 text-gray-600">
               Jurusan Otomatisasi dan Tata Kelola Perkantoran (OTKP) di SMK
