--- a/jurusan.html
+++ b/jurusan.html
@@ -185,7 +185,7 @@
           <div class="lg:w-1/2">
             <div
               class="h-64 bg-cover lg:rounded-lg lg:h-full"
-              style="background-image: url('image/activity/0.jpeg')"
+              style="background-image: url('image/activity/0.jpg')"
             ></div>
           </div>
           <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
