--- a/profile-sekolah.html
+++ b/profile-sekolah.html
@@ -62,6 +62,15 @@
             </li>
 
             <li>
+              <a
+                href="http://127.0.0.1:8000/"
+                class="text-white bg-[#1973A5] hover:font-extrabold rounded-md px-3 py-2 font-medium"
+              >
+                E-learning
+              </a>
+            </li>
+
+            <li>
               <button
                 id="dropdownNavbarLink"
                 data-dropdown-toggle="dropdownNavbar"
@@ -309,3 +318,4 @@
     </div>
   </body>
 </html>
+
